syntax = "proto3";

option csharp_namespace = "Grpc.Greeter.Service";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message ServerInfoReply {
	string date = 1;
	string hour = 2;
	string os = 3;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  ServerInfoReply serverInfo = 2;
}
